[tool.poetry]
name = "PaintDemo"
version = "0.1.0"
description = ""
authors = ["Tran Viet Phuoc <phuoc.finn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
